# directx_learning

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Panic.h  Renderer.cpp  Renderer.h  Triangle.cpp  Triangle.h  Window.cpp  Window.h  main.cpp  tasks.json.example
shaders/: DefaultPixelShader.hlsl  DefaultVertexShader.hlsl
